--- a/src/c3next/templates/index.html
+++ b/src/c3next/templates/index.html
@@ -1,17 +1,12 @@
 {% extends "base.html" %}
 {% block title %} Dashboard {% endblock %}
 
+{% block sidebar %}
+<li class="active"><a href="/">Overview <span class="sr-only">(current)</span></a></li>
+<li><a href="/listeners">Listeners</a></li>
+<li><a href="/beacons">Beacons</a></li>
+{% endblock %}
+
 {% block content %}
-<div class="row">
-  <div class="col-sm-3 col-md-2 sidebar">
-    <ul class="nav nav-sidebar">
-      <li class="active"><a href="/">Overview <span class="sr-only">(current)</span></a></li>
-      <li><a href="/listeners">Listeners</a></li>
-      <li><a href="/beacons">Beacons</a></li>
-    </ul>
-  </div>
-  <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-    <h1 class="page-header">Dashboard</h1>
-  </div>
-</div>
+<h1 class="page-header">Dashboard</h1>
 {% endblock %}
